--- a/package.json
+++ b/package.json
@@ -14,6 +14,10 @@
     "@chakra-ui/react": "^2.8.2",
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.0",
+    "@fontsource/dm-serif-display": "^5.0.19",
+    "@fontsource/lora": "^5.0.16",
+    "@fontsource/nunito": "^5.0.17",
+    "@fontsource/patua-one": "^5.0.18",
     "axios": "^1.6.7",
     "framer-motion": "^11.0.8",
     "react": "^18.2.0",
